--- a/index.html
+++ b/index.html
@@ -41,10 +41,110 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="banner">
+            <div class="banner-left">
+                <h2>ALWAYS <span class="orange-color">FRESH</span> <br> <span class="orange-color">FLOWERS</span></h2>
+                <p class="inter-font">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                    classic roses to
+                    exotic
+                    blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <div class="banner-right">
+                <img src="./assets/hero-flower.png" alt="hero-flower">
+            </div>
+        </section>
     </header>
 
-    <main>
+    <main class="container ">
+        <section class="our-plants">
 
+            <div class="our-plants-heading">
+                <h2><span class="orange-color">Our</span> Plants</h2>
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses
+                    to
+                    exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+
+
+            <div class="our-plants-cards">
+
+                <div class="card inter-font">
+                    <img src="./assets/sample-flower-image.png" alt="Sample-flower">
+                    <div class="card-info">
+                        <h3>Lily Blossom</h3>
+                        <p>20 USD</p>
+                    </div>
+                    <button class="add-to-card-btn">ADD TO CART</button>
+                </div>
+
+                <div class="card inter-font">
+                    <img src="./assets/sample-flower-image.png" alt="Sample-flower">
+                    <div class="card-info">
+                        <h3>Lily Blossom</h3>
+                        <p>20 USD</p>
+                    </div>
+                    <button class="add-to-card-btn">ADD TO CART</button>
+                </div>
+
+                <div class="card inter-font">
+                    <img src="./assets/sample-flower-image.png" alt="Sample-flower">
+                    <div class="card-info">
+                        <h3>Lily Blossom</h3>
+                        <p>20 USD</p>
+                    </div>
+                    <button class="add-to-card-btn">ADD TO CART</button>
+                </div>
+
+                <div class="card inter-font">
+                    <img src="./assets/sample-flower-image.png" alt="Sample-flower">
+                    <div class="card-info">
+                        <h3>Lily Blossom</h3>
+                        <p>20 USD</p>
+                    </div>
+                    <button class="add-to-card-btn">ADD TO CART</button>
+                </div>
+
+                <div class="card inter-font">
+                    <img src="./assets/sample-flower-image.png" alt="Sample-flower">
+                    <div class="card-info">
+                        <h3>Lily Blossom</h3>
+                        <p>20 USD</p>
+                    </div>
+                    <button class="add-to-card-btn">ADD TO CART</button>
+                </div>
+
+                <div class="card inter-font">
+                    <img src="./assets/sample-flower-image.png" alt="Sample-flower">
+                    <div class="card-info">
+                        <h3>Lily Blossom</h3>
+                        <p>20 USD</p>
+                    </div>
+                    <button class="add-to-card-btn">ADD TO CART</button>
+                </div>
+
+                <div class="card inter-font">
+                    <img src="./assets/sample-flower-image.png" alt="Sample-flower">
+                    <div class="card-info">
+                        <h3>Lily Blossom</h3>
+                        <p>20 USD</p>
+                    </div>
+                    <button class="add-to-card-btn">ADD TO CART</button>
+                </div>
+
+                <div class="card inter-font">
+                    <img src="./assets/sample-flower-image.png" alt="Sample-flower">
+                    <div class="card-info">
+                        <h3>Lily Blossom</h3>
+                        <p>20 USD</p>
+                    </div>
+                    <button class="add-to-card-btn">ADD TO CART</button>
+                </div>
+
+
+            </div>
+
+        </section>
     </main>
 
     <footer>
