--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <body>
 
+    <!-- banner and nav  -->
     <header class="container">
         <section class="nav-bar inter-font">
             <div class="primary-logo"> <img src="./assets/logo.png" alt="logo"> </div>
@@ -57,6 +58,7 @@
     </header>
 
     <main class="container ">
+        <!-- our-plants-section  -->
         <section class="our-plants">
 
             <div class="our-plants-heading">
@@ -143,6 +145,62 @@
 
 
             </div>
+
+        </section>
+        <!-- flower-and-plant-lover  -->
+        <section class="flower-and-plant-lovers">
+
+            <div class="flower-and-plant-lovers-left-side">
+                <img src="./assets/flower-store.png" alt="flower-store-pic">
+            </div>
+
+            <div class="trusted-badge">
+                <img src="./assets/trusted-badge.png" alt="trusted-badge">
+            </div>
+
+            <div>
+
+                <div class="flower-and-plant-lovers-right-side">
+                    <h2>Flower & Plants Lover</h2>
+                    <ul class="inter-font">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                </div>
+        </section>
+        <!-- latest-deals  -->
+
+        <section class="latest-deals-section">
+            <div class="latest-deals">
+                <h2> <span class="orange-color">Latest</span> Deals</h2>
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses
+                    to
+                    exotic
+                    blooms, we offer a wide variety of fresh.</p>
+            </div>
+
+
+            <section class="images-of-latest-deals">
+                <div class="latest-deals-image-cards-left">
+                    <div class="latest-deals-image-sub-card-1">
+                        <div class="dark-image"></div>
+                        <h2>60% Off | Bloom Plant</h2>
+                        <a class="inter-font" href="#">Shop Now</a>
+                    </div>
+                    <div class="latest-deals-image-sub-card-2">
+                        <h2>30% Off | Ana Plant</h2>
+                        <a class="inter-font" href="#">Shop Now</a>
+                    </div>
+                </div>
+                <div class="latest-deals-image-cards-right">
+                    <h2>25% Off | Zabo Plant</h2>
+                    <a class="inter-font" href="#">Shop Now</a>
+                </div>
+            </section>
 
         </section>
     </main>
