--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- font  noto-sherif-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
     <!-- font-inter  -->
@@ -45,7 +45,8 @@
 
         <section class="banner">
             <div class="banner-left">
-                <h2>ALWAYS <span class="orange-color">FRESH</span> <br> <span class="orange-color">FLOWERS</span></h2>
+                <h2 class="noto-sans-font">ALWAYS <span class="orange-color">FRESH</span> <br> <span
+                        class="orange-color">FLOWERS</span></h2>
                 <p class="inter-font">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
                     classic roses to
                     exotic
@@ -62,7 +63,7 @@
         <section class="our-plants">
 
             <div class="our-plants-heading">
-                <h2><span class="orange-color">Our</span> Plants</h2>
+                <h2 class="noto-sans-font"><span class="orange-color">Our</span> Plants</h2>
                 <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses
                     to
                     exotic blooms, we offer a wide variety of fresh.</p>
@@ -161,7 +162,7 @@
             <div>
 
                 <div class="flower-and-plant-lovers-right-side">
-                    <h2>Flower & Plants Lover</h2>
+                    <h2 class="noto-sans-font">Flower & Plants Lover</h2>
                     <ul class="inter-font">
                         <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
                             roses to exotic blooms, we offer a wide variety of fresh.</li>
@@ -176,8 +177,9 @@
 
         <section class="latest-deals-section">
             <div class="latest-deals">
-                <h2> <span class="orange-color">Latest</span> Deals</h2>
-                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses
+                <h2 class="noto-sans-font"> <span class="orange-color">Latest</span> Deals</h2>
+                <p class="inter-font">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                    classic roses
                     to
                     exotic
                     blooms, we offer a wide variety of fresh.</p>
@@ -188,16 +190,16 @@
                 <div class="latest-deals-image-cards-left">
                     <div class="latest-deals-image-sub-card-1">
                         <div class="dark-image"></div>
-                        <h2>60% Off | Bloom Plant</h2>
+                        <h2 class="noto-sans-font">60% Off | Bloom Plant</h2>
                         <a class="inter-font" href="#">Shop Now</a>
                     </div>
                     <div class="latest-deals-image-sub-card-2">
-                        <h2>30% Off | Ana Plant</h2>
+                        <h2 class="noto-sans-font">30% Off | Ana Plant</h2>
                         <a class="inter-font" href="#">Shop Now</a>
                     </div>
                 </div>
                 <div class="latest-deals-image-cards-right">
-                    <h2>25% Off | Zabo Plant</h2>
+                    <h2 class="noto-sans-font">25% Off | Zabo Plant</h2>
                     <a class="inter-font" href="#">Shop Now</a>
                 </div>
             </section>
@@ -206,7 +208,48 @@
     </main>
 
     <footer>
+        <section class="join-the-colorful-bunch">
+            <h2 class="noto-sans-font">Join the colorful Bunch</h2>
+            <div class="join-the-colorful-bunch-input-feild">
+                <input type="text" placeholder="write email">
+                <button class="Subscribe-btn">Subscribe</button>
+            </div>
+        </section>
 
+        <section class="final-footer container inter-font">
+            <div class="box-1">
+                <img src="./assets/logo.png" alt="logo.">
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+            </div>
+            <div class="box-2">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="box-3">
+                <nav>
+                    <ul>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Help Center</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="box-4">
+                <img src="./assets/icon-linkedin.png" alt="icon-linkedin">
+                <img src="./assets/icon-twitter.png" alt="icon-twitter">
+                <img src="./assets/icon-facebook.png" alt="icon-facebook">
+                <img src="./assets/icon-youtube.png" alt="icon-youtube">
+            </div>
+        </section>
     </footer>
 
 </body>
