--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
             <div class="our-plants-heading">
                 <h2 class="noto-sans-font"><span class="orange-color">Our</span> Plants</h2>
-                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses
+                <p class="inter-font">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                    <br> classic roses
                     to
                     exotic blooms, we offer a wide variety of fresh.</p>
             </div>
