--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="our-plants-heading">
                 <h2 class="noto-sans-font"><span class="orange-color">Our</span> Plants</h2>
                 <p class="inter-font">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
-                    <br> classic roses
+                    classic roses
                     to
                     exotic blooms, we offer a wide variety of fresh.</p>
             </div>
