--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <h2 class="noto-sans-font">Join the colorful Bunch</h2>
             <div class="join-the-colorful-bunch-input-feild">
                 <input type="text" placeholder="write email">
-                <button class="Subscribe-btn">Subscribe</button>
+                <button class="Subscribe-btn add-to-card-btn">Subscribe</button>
             </div>
         </section>
 
