--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <section class="join-the-colorful-bunch">
             <h2 class="noto-sans-font">Join the colorful Bunch</h2>
             <div class="join-the-colorful-bunch-input-feild">
-                <input type="text" placeholder="write email">
+                <input type="text" placeholder="Write email">
                 <button class="Subscribe-btn add-to-card-btn">Subscribe</button>
             </div>
         </section>
